--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,48 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.shape {
+    position: relative;
+
+    &::after, &::before, .shape-diff, .shape-diff-2, .shape-diff-3 {
+        content: "";
+        position: absolute;
+        width: 32px;
+        height: 32px;
+        background: #40E0D0;
+    }
+
+    .shape-diff-3 {
+        right: -10px;
+        top: 20px;
+        background: #1c1c1c;
+    }
+
+    .shape-diff-2 {
+        top: -10px;
+        right: 20px;
+        background: #1c1c1c;
+    }
+
+    .shape-diff {
+        top: 0;
+        right: 0;
+        background: #1c1c1c;
+        border-bottom-left-radius: 8px;
+    }
+
+    &::before {
+        top: 32px;
+        right: 0;
+        z-index: 2;
+        border-radius: 8px;
+    }
+
+    &::after {
+        right: 32px;
+        top: 0;
+        z-index: 2;
+        border-radius: 8px;
+    }
+}
