--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,71 +1,75 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #1c1c1c;
+  --primary: #008080;
+  --secondary: #ff7f50;
+  --accent: #40e0d0;
+  --text: #eeeeee;
+  --border-divider: #333333;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #242424;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --primary: #008080;
+    --secondary: #ff7f50;
+    --accent: #40e0d0;
+    --text: #333333;
+    --border-divider: #e0e0e0;
   }
 }
 
+@theme base {
+  --color-background: var(--background);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-text: var(--text);
+  --color-border-divider: var(--border-divider);
+}
+
+* {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-[#121212] text-text;
+}
+
+main {
+  @apply flex justify-center items-center h-screen p-4;
 }
 
 .shape {
-    position: relative;
+  @apply relative;
 
-    &::after, &::before, .shape-diff, .shape-diff-2, .shape-diff-3 {
-        content: "";
-        position: absolute;
-        width: 32px;
-        height: 32px;
-        background: #40E0D0;
-    }
+  &::after,
+  &::before,
+  .shape-diff,
+  .shape-diff-2,
+  .shape-diff-3 {
+    @apply absolute w-8 h-8 bg-accent;
+    content: "";
+  }
 
-    .shape-diff-3 {
-        right: -10px;
-        top: 20px;
-        background: #1c1c1c;
-    }
+  .shape-diff-3 {
+    @apply -right-2.5 top-5 bg-background;
+  }
 
-    .shape-diff-2 {
-        top: -10px;
-        right: 20px;
-        background: #1c1c1c;
-    }
+  .shape-diff-2 {
+    @apply -top-2.5 right-5 bg-background;
+  }
 
-    .shape-diff {
-        top: 0;
-        right: 0;
-        background: #1c1c1c;
-        border-bottom-left-radius: 8px;
-    }
+  .shape-diff {
+    @apply top-0 right-0 bg-background rounded-bl-lg;
+  }
 
-    &::before {
-        top: 32px;
-        right: 0;
-        z-index: 2;
-        border-radius: 8px;
-    }
+  &::before {
+    @apply top-8 right-0 rounded-lg z-10;
+  }
 
-    &::after {
-        right: 32px;
-        top: 0;
-        z-index: 2;
-        border-radius: 8px;
-    }
+  &::after {
+    @apply right-8 top-0 rounded-lg z-10;
+  }
 }
